# SC3000-Artifical-Intelligence-2025

./: DPO_finetuning.ipynb  README.md  configurator.py  dpo.ipynb  model.py  pyproject.toml
