[project]
name = "sc3000-ai-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "datasets>=4.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "tensorflow>=2.16.2",
    "tensorflow-macos>=2.15.0",
    "tensorflow-metal>=1.1.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]
